[tool.poetry]
name = "discord.py"
version = "1.7.3"
description = ""
authors = ["lanxdrey19 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
praw = "^7.4.0"
pyowm = "^3.2.0"
python-dotenv = "^0.19.0"
pytz = "^2021.1"
aPRAW = "^0.6.8-alpha.0"
Pillow = "^9.0.1"
PyNaCl = "1.3.0"
DiscordUtils = "^1.3.4"
dnspython = "1.16.0"
async-timeout = "3.0.1"
Flask = "^2.0.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
